--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
                             <!-- <p>spacer here</p> -->
                         </div>
                         <div id="links">
-                            <a href="index.html">About   </a>
-                            <a href="portfolio.html">Portfolio   </a>
-                            <a href="contact.html">Contact</a>
+                            <ul id="links_list">
+                                <li> <a href="index.html">About</a> </li>
+                                <li> <a href="portfolio.html">Portfolio</a> </li>
+                                <li> <a href="contact.html">Contact</a> </li>
+                            </ul>
                         </div>
                     </div>
                 </header>
