better link list

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                             <!-- <p>spacer here</p> -->
                         </div>
                         <div id="links">
-                            <ul id="links_list">
-                                <li> <a href="index.html">About</a> </li>
-                                <li> <a href="portfolio.html">Portfolio</a> </li>
-                                <li> <a href="contact.html">Contact</a> </li>
-                            </ul>
+                                <ul>
+                                    <li class="link_list"> <a href="index.html">About</a> </li>
+                                    <li class="link_list"> <a href="portfolio.html">Portfolio</a> </li>
+                                    <li class="link_list"> <a href="contact.html">Contact</a> </li>
+                                </ul>
                         </div>
                     </div>
                 </header>
