--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
                             <!-- <p>spacer here</p> -->
                         </div>
                         <div id="links">
-                                <ul id="links_list">
-                                    <li> <a href="index.html">About</a> </li>
-                                    <li> <a href="portfolio.html">Portfolio</a> </li>
-                                    <li> <a href="contact.html">Contact</a> </li>
+                                <ul>
+                                    <li class="link_list"> <a href="index.html">About</a> </li>
+                                    <li class="link_list"> <a href="portfolio.html">Portfolio</a> </li>
+                                    <li class="link_list"> <a href="contact.html">Contact</a> </li>
                                 </ul>
                         </div>
                     </div>
