portfolio looking mostly right

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,15 +30,26 @@
             <div id="content_box">
                 <h1 id="about_me" >Portfolio</h1>
                 <hr id="horizontal_line">
-                <div id=hangman_div>
+                <div class="box">
                     <img Class="portfolio_pic" id="hangman_pic"               src="./assets/images/pic1_fixed.png" alt="Hangman pic">
                     <a class="portfolio_link" href="hangman.html">Hangman</a>
                 </div>
-                <img Class="portfolio_pic" id="RPG_game_pic"              src="./assets/images/pic2_fixed.jpg" alt="RPG Game Pic">
-                <img Class="portfolio_pic" id="trivia_game_pic"           src="./assets/images/pic_3_fixed.jpg" alt="Trivia Game pic">
-                <img Class="portfolio_pic" id="Rutgers_info_pic"          src="./assets/images/pic4_fixed.jpg" alt="Rutgers info pic">
-                <img Class="portfolio_pic" id="rock_paper_scissors_pic"   src="./assets/images/pic5_fixed.jpg" alt="Rock Paper Scissors pic">
-                
+                <div class="box">
+                    <img Class="portfolio_pic" id="RPG_game_pic"              src="./assets/images/pic2_fixed.jpg" alt="RPG Game Pic">
+                    <a class="portfolio_link" href="rpg_game.html">RPG Game</a>
+                </div>
+                <div class="box">
+                    <img Class="portfolio_pic" id="trivia_game_pic"           src="./assets/images/pic_3_fixed.jpg" alt="Trivia Game pic">
+                    <a class="portfolio_link" href="trivia_game.html">Trivia Game</a>
+                </div>
+                <div class="box">
+                    <img Class="portfolio_pic" id="Rutgers_info_pic"          src="./assets/images/pic4_fixed.jpg" alt="Rutgers info pic">
+                    <a class="portfolio_link" href="rutgers_info.html">Rutgers Info</a>
+                </div>
+                <div class="box">
+                    <img Class="portfolio_pic" id="rock_paper_scissors_pic"   src="./assets/images/pic5_fixed.jpg" alt="Rock Paper Scissors pic">
+                    <a class="portfolio_link" href="rock_paper_scissors.html">Rock Paper Scissors</a>
+                </div>
             </div>
         </div>
      
